# 9-practica-pollimorfismosalario-Manuelr0107

./: CMakeLists.txt  UML.md  main.cpp
src/: Empleado.cpp  Empleado.h  EmpleadoJunior.cpp  EmpleadoJunior.h  EmpleadoSenior.cpp  EmpleadoSenior.h  EmpleadoTester.cpp  EmpleadoTester.h  LiderTecnico.cpp  LiderTecnico.h  Nomina.cpp  Nomina.h
